# llm-regression-detector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo.tape  pyproject.toml
.claude/: settings.json
.claude/commands/: add-case.md  check.md  eval.md  fix-types.md  new-prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval.yml
context/: PLATFORM.md  PROCESS.md  PRODUCT.md
docs/: architecture.md  golden-dataset-guide.md
golden_dataset/: incidents.json  support_emails.json
prompts/: classifier_v1.yaml  classifier_v2_degraded.yaml  incident_triage_v1.yaml  incident_triage_v2_degraded.yaml
scripts/: self_eval_demo.sh
src/llm_regression_detector/: __init__.py  __main__.py  cli.py  config.py
src/llm_regression_detector/dashboard/: __init__.py  app.py
src/llm_regression_detector/diff/: __init__.py  analyzer.py  drift.py
src/llm_regression_detector/eval/: __init__.py  dataset.py  parsing.py  runner.py  scorer.py  stats.py
src/llm_regression_detector/llm/: __init__.py  client.py  mock.py
src/llm_regression_detector/notify/: __init__.py  base.py  discord.py  generic.py  google_chat.py  slack.py  transport.py
src/llm_regression_detector/report/: __init__.py  html.py  pr_comment.py
src/llm_regression_detector/report/templates/: report.html.j2
src/llm_regression_detector/storage/: __init__.py  sqlite.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_config.py  test_dataset.py  test_diff.py  test_drift.py  test_judge_consensus.py  test_llm_client.py  test_mock_incident.py  test_notifiers.py  test_notify_transport.py  test_report.py  test_scorer.py  test_stats.py  test_storage.py  test_storage_migration.py
